Fix: horizontal scrolling

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -36,8 +37,10 @@ a {
 }
 
 footer {
+  
   text-indent: 20px;
-  width: 100vw;
+  width: 100%;
+  margin: 0;
   padding: 40px 0;
   border-top: 2px solid #3d3d3d;
   border-bottom: 2px solid #3d3d3d;
